fixed overflow prob. with overflow-hidden

--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
     background: #788fa1;
     font-family: Montserrat;
+    background-image: url('./clouds-sea.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .nav-link {
@@ -31,7 +34,3 @@ body {
     }
 }
 
-.clouds {
-    background-image: url('./clouds-sea.jpg');
-    /* background-size: cover; */
-}
